--- a/index.html
+++ b/index.html
@@ -2,21 +2,17 @@
 <html>
 <head>
   <title>Настроение</title>
-  <script id="quotes_json" type="application/json">
-    [
-      {
-        "phrase": "Кукурузные хлопья - теперь без асбеста!",
-        "signature": "©Неизвестный маркетолог"
-      },
-      {
-        "phrase": "Собираюсь жить вечно, пока всё идёт нормально"
-      },
-      {
-        "phrase": "Если ты будешь усердно работать по 8 часов в день, то обязательно станешь боссом и начнешь работать по 12"
-      }
-    ]
-  </script>
+  <script id="jQuery" type="text/javascript" src="static/js/jquery.min.js"></script>
+  <script id="quotes_json" src="static/js/quotes_json.js"></script>
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="static/css/style.css" rel="stylesheet">
+
 </head>
 <body>
+    <div class="cont_q">
+        <h1><div id="quote"></div></h1>
+        <h2><i id="author_and_era"></i></h2>
+        
+    </div>
 </body>
 </html>
