--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <h2><i id="author_and_era"></i></h2>
             
         </details>
-        
+        <br>
+        <br>
+        <br>
+        <button class="btn" id="update">Новая цитата</button>
     </div>
 </body>
 </html>
