add pointer and and underlining

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="cont_q">
         <h1><div id="quote"></div></h1>
         <details>  
-            <summary class="ans">Ответ</summary>
+            <summary class="ans">Показать ответ</summary>
             <h2><i id="author_and_era"></i></h2>
             
         </details>
