--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="cont_q">
-        <h1><div id="quote"></div></h1>
+        <h1 id="quote"></h1>
         <details>  
-            <summary class="ans">Показать ответ</summary>
+            <summary class="ans" id="ans">Показать ответ</summary>
             <h2><i id="author_and_era"></i></h2>
             
         </details>
