add quotes for exam

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <br>
         <br>
         <button class="btn" id="update">Новая цитата</button>
+        <br>
+        <br>
+        <input type="radio" name="topic" id="1_sem"> <b style="color: white;">1 семестр</b><br>
+		<input type="radio" name="topic" id="2_sem"> <b style="color: white;">2 семестр</b><br>
+	    <input type="radio" name="topic" id="all"> <b style="color: white;">Всё     </b>
     </div>
 </body>
 </html>
