--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <br>
         <button class="btn" id="update">Новая цитата</button>
         <br>
+        <h2><i id="done"></i><i id="amount"></i></h2>
         <br>
         <input type="radio" name="topic" id="1_sem"> <b style="color: white;">1 семестр</b><br>
 		<input type="radio" name="topic" id="2_sem"> <b style="color: white;">2 семестр</b><br>
